--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <h2>Gabriel Iverson</h2>
+    <h2>About Page</h2>
+    <p>Some really cool feature - TEST</p>
+    <p>My changes</p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <div class="box">
         <span></span>
         <h2>Devslopes</h2>
