--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>About Page</h2>
     <p>Some really cool feature - TEST</p>
     <p>My changes</p>
+    <p>git test</p>
     <ul>
         <li></li>
         <li></li>
