--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h2>Gabriel Iverson</h2>
-    <h2>About Page</h2>
+    <h4>About Page</h4>
     <p>Some really cool feature - TEST</p>
     <p>My changes</p>
+    <p>git test</p>
     <ul>
         <li></li>
         <li></li>
