updated home page and css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Gabriel Iverson</h2>
-    <h4>About Page</h4>
-    <p>Some really cool feature - TEST</p>
-    <p>My changes</p>
-    <p>git test</p>
+  <div class="app-body">
+    <div class="box">
+        <span></span>
+        <h2>Devslopes</h2>
+        <h3>Learn to Code</h3>
+    </div>
     <ul>
         <li></li>
         <li></li>
@@ -20,10 +21,6 @@
         <li></li>
         <li></li>
     </ul>
-    <div class="box">
-        <span></span>
-        <h2>Devslopes</h2>
-        <h3>Learn to Code</h3>
-    </div>
+  </div>
 </body>
 </html>
